--- a/composer.json
+++ b/composer.json
@@ -1,10 +1,11 @@
 {
     "name": "qubus/filesystem",
     "type": "library",
-    "description": "Filesystem component.",
+    "description": "Filesystem component wrapper for League/Flysystem.",
     "keywords": [
         "file",
         "filesystem",
+        "flysystem",
         "directory"
     ],
     "license": "MIT",
@@ -17,12 +18,17 @@
     ],
     "require": {
         "php": "^8.0",
-        "league/flysystem": "^2.2",
-        "qubus/exception": "^1.2"
+        "league/flysystem": "^2.3",
+        "league/flysystem-aws-s3-v3": "^2.1",
+        "league/flysystem-ftp": "^2.3",
+        "league/flysystem-memory": "^2.0",
+        "league/flysystem-sftp": "^2.2",
+        "qubus/config": "^1",
+        "qubus/exception": "^1"
     },
     "require-dev": {
         "laminas/laminas-coding-standard": "^2.0",
-        "squizlabs/php_codesniffer": "^3.3"
+        "squizlabs/php_codesniffer": "^3.5"
     },
     "autoload": {
         "psr-4": {
