--- a/composer.json
+++ b/composer.json
@@ -16,12 +16,14 @@
         }
     ],
     "require": {
-        "php": "^8.1",
+        "php": ">=8.1",
+        "ext-curl": "*",
+        "ext-ftp": "*",
         "league/flysystem": "^3.1",
         "league/flysystem-aws-s3-v3": "^3.1",
         "league/flysystem-ftp": "^3.1",
         "league/flysystem-memory": "^3.1",
-        "league/flysystem-sftp": "^3.1",
+        "league/flysystem-sftp-v3": "^3.2",
         "qubus/config": "^2.0",
         "qubus/exception": "^2.0"
     },
@@ -40,6 +42,9 @@
     },
     "config": {
         "optimize-autoloader": true,
-        "sort-packages": true
+        "sort-packages": true,
+        "allow-plugins": {
+            "dealerdirect/phpcodesniffer-composer-installer": true
+        }
     }
 }
